# testcase

./: README.md  package.json  pnpm-lock.yaml  tsconfig.node.json
.github/workflows/: release.yml
src/: App.tsx  TestCaseAdvancedPage.tsx  TestCasePage.tsx
src-tauri/: Cargo.toml  tauri.conf.json  tauri.macos.conf.json  tauri.windows.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
